Serf 1.2.0 [not yet released, on branch /branches/1.2.x]
  Fixed issue 91: Serf doesn't handle an incoming 408 Timeout Request
  Fixed issue 80: Serf is not handling Negotiate authentication correctly
  Fixed issue 77: Endless loop if server doesn't accept Negotiate authentication
  Fixed most of issue 89: Support REAL SPNEGO authentication
  Enable Negotiate/Kerberos support for proxy servers.

  Return error when C-L, chunked, gzip encoded response bodies where truncated
    (due to aborted connection) (r1688)
  Add a logging mechanism that can be enabled at compile-time.
  Don't lookup server address if a proxy was configured. (r1706)
  Fix an off-by-one in buffer sizing (1695)
  Disable SSL compression by default + API to enable it (1692)
  New API serf_connection_get_latency() for estimated network latency (1689)
  New error code and RFC compliance for the HTTPS tunnel (r1701, 1644)
  Handle EINTR when a user suspends and then backgrounds the application (r1708)
  Minor fixes and test suite improvements.


Serf 1.1.1 [2012-10-04, from /tags/1.1.1]
  Fixed issue 86: ensure requeued requests are correctly handled. This fixes:
    - infinite loop with multiple connection resets or SIGPIPE errors
    - "connection" hang where we would not re-queue requests that are held after
      we re-connect
  Fixed issue 74: test_all goes in an endless loop
  Fix memory leak when conn. is closed explicitly/due to pool cleanups (r1623)
  Fix for https on Windows: handle connection aborts (r1628..-30,-33,-34,-37)
  Add new error codes for the SSL bucket


Serf 1.1.0 [2012-06-07, from /tags/1.1.0]
  New: serf_bucket_request_set_CL() for C-L based, non-chunked requests
  New: serf_ssl_server_cert_chain_callback_set() for full-chain validation


Serf 1.0.3 [2012-03-20, from /tags/1.0.3, r1586]
  Map more OpenSSL errors into SERF_SSL_CERT_UNKNOWNCA (r1573)


Serf 1.0.2
  Not released.


Serf 1.0.1 [2012-02-15, from /tags/1.0.1, r1569]